--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main class="main-content">
         <section class="hero">
             <h1 class="hero-title">Building intelligent systems from complex data.</h1>
-            <p class="hero-subtitle">I'm a Data Engineer with a passion for software engineering, crafting robust data pipelines and exploring the frontiers of machine learning. I turn raw data into meaningful, actionable insights.</p>
+            <p class="hero-subtitle">I'm a Software Engineer with a passion for data engineering, crafting robust data pipelines and exploring the frontiers of machine learning. I turn raw data into meaningful, actionable insights.</p>
             <div class="hero-cta">
                 <a href="projects.html" class="btn btn-primary">View My Work</a>
                 <a href="resume.html" class="btn btn-secondary">View My Resume</a>
