--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
             <h3>Current Role</h3>
             <div class="resume-item">
                 <h4>Software Engineer</h4>
-                <p class="resume-details"><em>Colorado State Univerity | Mar 2024 - Present</em></p>
+                <p class="resume-details"><em>Colorado State University | Mar 2024 - Present</em></p>
                 <ul>
                     <li>Engineered and automated ETL processes using Snowflake, reducing data processing time by 30%.</li>
                     <li>Developed and deployed interactive Power BI dashboards using dimensional modeling, enabling data-driven decision-making for key stakeholders.</li>
@@ -44,7 +44,7 @@
             <h3>Education</h3>
             <div class="resume-item">
                 <h4>Bachelor of Science in Computer Science</h4>
-                <p class="resume-details"><em>Colorado State Univerity | Expected Graduation: 2026</em></p>
+                <p class="resume-details"><em>Colorado State University | Expected Graduation: 2026</em></p>
             </div>
         </section>
         
